fixed Submissions view on mobile dashboard

--- a/client/components/DashboardFrame/dashboardFrame.scss
+++ b/client/components/DashboardFrame/dashboardFrame.scss
@@ -49,7 +49,7 @@ $mobile-viewport-cutoff: 750px;
 			margin-left: 1em;
 			@include mobile {
 				font-size: 12px;
-				padding: 4px 4px;
+				padding: 4px 10px;
 				margin-top: 4px;
 				margin-bottom: 4px;
 				margin-left: 0;
